--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 
 {
     "version": 2,
-    "build": [
+    "builds": [
         {
             "src" : "./index.js",
             "use" : "@vercel/node"
@@ -10,7 +10,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "des" : "/"
+            "dest" : "/"
         }
   ]
 }
